@@ -1,5 +1,14 @@
 2023-09-14  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* src/roff/troff/input.cpp: Trivially refactor.  Rename
+	`unsafe_flag` to `want_unsafe_requests`.
+	(pipe_source, open_request, opena_request, pipe_output):
+	(system_request, main, init_input_requests): Do it.
+	(init_input_requests): Migrate from `readonly_register` to
+	`readonly_boolean_register`.
+
+2023-09-14  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	[troff]: Add class for Boolean-valued read-only registers.
 	Their values have been stored variously in `readonly_register`,
 	which has full `int` range, and in normal string registers, as
